added small js script for arrow nav button and nav bar in general

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
      <a href="#"><i class="fa fa-instagram"></i></a>
     </li>
    </ul>
+
   </nav>
+  <div id="banner">
+   <div class="banner-text">
+    <h1>Fast Banana</h1>
+    <h3>This is what we do</h3>
+    <a href="#">Start right Now</a>
+    <a href="#">Learn more</a>
+   </div>
+  </div>
  </header>
  <!-- end of header -->
 
@@ -45,7 +54,9 @@
 
 
 
- <script src=""></script>
+ <!-- Jquery cdn -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script src="script.js"></script>
 </body>
 
 </html>
