working with HTML and CSS learned some new trick like  clip-path:

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <i class="fa fa-arrow-down" id="toggle-btn"></i>
    </div>
    <ul class="nav-links">
-    <li><a href="#home">Home</a></li>
+    <li><a href="#banner">Home</a></li>
     <li><a href="#services">Services</a></li>
     <li><a href="#Portfolio">Portfolio</a></li>
     <li><a href="#About">About</a></li>
@@ -47,7 +47,14 @@
   </div>
  </header>
  <!-- end of header -->
-
+ <!-- icons section  -->
+ <section id="icon-section">
+  <a href=""><i class="fa fa-home"></i></a>
+  <a href=""><i class="fa fa-book"></i></a>
+  <a href=""><i class="fa fa-coffee"></i></a>
+  <a href=""><i class="fa fa-anchor"></i></a>
+ </section>
+ <!-- end of icons section  -->
 
 
 
