added new section and some styles, used grid

--- a/index.html
+++ b/index.html
@@ -57,8 +57,54 @@
  <!-- end of icons section  -->
 
 
-
-
+ <!-- skills section -->
+ <section id="skills">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-gears"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">Skills that we provide</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div class="skills-center">
+   <article class="skill">
+    <i class="fa fa-apple"></i>
+    <h3>Apple</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, maxime?</p>
+   </article>
+   <article class="skill">
+    <i class="fa fa-google"></i>
+    <h3>google</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, maxime?</p>
+   </article>
+   <article class="skill">
+    <i class="fa fa-android"></i>
+    <h3>android</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, maxime?</p>
+   </article>
+   <article class="skill">
+    <i class="fa fa-gear"></i>
+    <h3>Gear</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, maxime?</p>
+   </article>
+  </div>
+ </section>
+ <!-- end off skills section -->
+ <!-- form section  -->
+ <section id="form">
+  <div class="form-contect">
+   <h1 class="form-title">Subscribe here</h1>
+   <form>
+    <input type="email" id="email" name="email" placeholder="Your Email">
+    <input type="submit" id="submit" value="Submit">
+   </form>
+  </div>
+ </section>
+ <!-- end of form section  -->
 
 
  <!-- Jquery cdn -->
