added new section "future projects", added script isotope for learning purposes it is working great!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </div>
    <ul class="nav-links">
     <li><a href="#banner">Home</a></li>
-    <li><a href="#services">Services</a></li>
+    <li><a href="#skills">Services</a></li>
     <li><a href="#Portfolio">Portfolio</a></li>
     <li><a href="#About">About</a></li>
     <li><a href="#Contacts">Contacts</a></li>
@@ -105,10 +105,82 @@
   </div>
  </section>
  <!-- end of form section  -->
+ <!-- work section  -->
+ <section id="work">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-pencil-square-o"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">Future projects</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div class="work-center">
+   <div class="button-container">
+    <div class="button-group filter-button-group">
+     <button data-filter="*">all</button>
+     <button data-filter=".city">city</button>
+     <button data-filter=".country">country</button>
+     <button data-filter=".water">water</button>
+    </div>
+   </div>
+   <div class="picture-container">
+    <article class="picture-item city">
+     <img src="images/projects-city-1.jpeg" alt="work-1">
+    </article>
+    <article class="picture-item country">
+     <img src="images/projects-country-1.jpeg" alt="work-2">
+    </article>
+    <article class="picture-item water">
+     <img src="images/projects-water-1.jpeg" alt="work-3">
+    </article>
+    <article class="picture-item city">
+     <img src="images/projects-city-2.jpeg" alt="work-1">
+    </article>
+    <article class="picture-item country">
+     <img src="images/projects-country-2.jpeg" alt="work-2">
+    </article>
+    <article class="picture-item water">
+     <img src="images/projects-water-2.jpeg" alt="work-3">
+    </article>
+    <article class="picture-item city">
+     <img src="images/projects-city-3.jpeg" alt="work-1">
+    </article>
+    <article class="picture-item country">
+     <img src="images/projects-country-3.jpeg" alt="work-2">
+    </article>
+    <article class="picture-item water">
+     <img src="images/projects-water-3.jpeg" alt="work-3">
+    </article>
+   </div>
+  </div>
 
+
+
+
+
+
+
+
+
+
+ </section>
+ <!-- end of work section -->
 
  <!-- Jquery cdn -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <!-- images loaded -->
+ <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+ <!-- isotope  -->
+ <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+
+ <script src="iso.js">
+
+ </script>
+ <!-- script js -->
  <script src="script.js"></script>
 </body>
 
