--- a/index.html
+++ b/index.html
@@ -159,16 +159,50 @@
   </div>
 
 
-
-
-
-
-
-
-
-
  </section>
  <!-- end of work section -->
+
+ <!-- about section -->
+ <section id="about">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-user"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">About us</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div id="about-center">
+   <article id="about-photo">
+    <img src="images/current-projects-1.jpeg" alt="current proejct">
+   </article>
+   <article id="about-text">
+    <div id="accordion">
+     <h3>Press here for more info</h3>
+     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa voluptatum provident sit. Omnis enim,
+      incidunt eius minima facere repellat!</div>
+     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa voluptatum provident sit. Omnis enim,
+      incidunt eius minima facere repellat!</div>
+     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa voluptatum provident sit. Omnis enim,
+      incidunt eius minima facere repellat!</div>
+    </div>
+   </article>
+  </div>
+ </section>
+ <!-- end of  about section -->
+
+
+
+
+
+
+
+
+
+
 
  <!-- Jquery cdn -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
