added Jqueryu Cdn with accordion to index.html + some styles
first time worked with jquery accordion, note to everyone while adding <script> cdn's make sure to put src of jQuery library first to run

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
  <!-- goolge fonts -->
  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+ <!-- jquery ui cdn -->
+ <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 </head>
 
 <body>
@@ -184,8 +186,10 @@
      <h3>Press here for more info</h3>
      <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa voluptatum provident sit. Omnis enim,
       incidunt eius minima facere repellat!</div>
+     <h3>Press here for more info</h3>
      <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa voluptatum provident sit. Omnis enim,
       incidunt eius minima facere repellat!</div>
+     <h3>Press here for more info</h3>
      <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa voluptatum provident sit. Omnis enim,
       incidunt eius minima facere repellat!</div>
     </div>
@@ -204,7 +208,8 @@
 
 
 
- <!-- Jquery cdn -->
+ <!-- !!! important all the Jquery based tools must be placed after Jquery CDN !!! -->
+ <!-- Jquery cdn  -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <!-- images loaded -->
  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
@@ -212,8 +217,10 @@
  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
  <script src="iso.js">
-
  </script>
+
+ <!-- jquery ui cdn -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
  <!-- script js -->
  <script src="script.js"></script>
 </body>
