added new team member section with styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
  <!-- jquery ui cdn -->
  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+ <!-- magnific pop up css -->
+ <link rel="stylesheet" href="magnific/magnific-popup.css">
 </head>
 
 <body>
@@ -198,11 +200,154 @@
  </section>
  <!-- end of  about section -->
 
+ <!-- current project secrion -->
+ <section id="current">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-image"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">Current projects</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div id="current-center">
+   <article class="current-item">
+    <a href="images/current-projects-1.jpeg">
+     <img src="images/current-projects-1.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-2.jpeg">
+     <img src="images/current-projects-2.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-3.jpeg">
+     <img src="images/current-projects-3.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-4.jpeg">
+     <img src="images/current-projects-4.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-1.jpeg">
+     <img src="images/current-projects-1.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-2.jpeg">
+     <img src="images/current-projects-2.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-3.jpeg">
+     <img src="images/current-projects-3.jpeg" alt="current-project"></a>
+   </article>
+   <article class="current-item">
+    <a href="images/current-projects-4.jpeg">
+     <img src="images/current-projects-4.jpeg" alt="current-project"></a>
+   </article>
+  </div>
+ </section>
+ <!-- end of current project secrion -->
 
+ <!-- numbers section  -->
+ <section id="numbers">
+  <article class="number">
+   <i class="fa fa-user"></i>
+   <p class='numscroller' data-min='1' data-max='100000' data-delay='10000' data-increment='1'></p>
+   <h3>Users</h3>
+  </article>
+  <article class="number">
+   <i class="fa fa-cart-plus"></i>
+   <p class='numscroller' data-min='1' data-max='100000' data-delay='10000' data-increment='4'></p>
+   <h3>downloads</h3>
+  </article>
+  <article class="number">
+   <i class="fa fa-fire-extinguisher"></i>
+   <p class='numscroller' data-min='1' data-max='100000' data-delay='10000' data-increment='2'></p>
+   <h3>emergencies covered</h3>
+  </article>
+  <article class="number">
+   <i class="fa fa-envelope"></i>
+   <p class='numscroller' data-min='1' data-max='100000' data-delay='100000' data-increment='1'></p>
+   <h3>messages everyday</h3>
+  </article>
+ </section>
+ <!-- end of numbers section  -->
 
-
-
-
+ <!-- team section -->
+ <section id="team">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-image"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">Meet Our team</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div id="team-center">
+   <article class="team-member">
+    <img src="images/team-1.jpg" alt="team-member">
+    <h2>Team-member Name</h2>
+    <h5>Developer</h5>
+    <hr>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+     cum fuga deleniti natus possimus.</p>
+    <div class="team-member-footer">
+     <a href="#"><i class="fa fa-facebook"></i></a>
+     <a href="#"><i class="fa fa-twitter"></i></a>
+     <a href="#"><i class="fa fa-linkedin"></i></a>
+     <a href="#"><i class="fa fa-google-plus"></i></a>
+    </div>
+   </article>
+   <article class="team-member">
+    <img src="images/team-2.jpg" alt="team-member">
+    <h2>Team-member Name</h2>
+    <h5>Developer</h5>
+    <hr>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+     cum fuga deleniti natus possimus.</p>
+    <div class="team-member-footer">
+     <a href="#"><i class="fa fa-facebook"></i></a>
+     <a href="#"><i class="fa fa-twitter"></i></a>
+     <a href="#"><i class="fa fa-linkedin"></i></a>
+     <a href="#"><i class="fa fa-google-plus"></i></a>
+    </div>
+   </article>
+   <article class="team-member">
+    <img src="images/team-3.jpg" alt="team-member">
+    <h2>Team-member Name</h2>
+    <h5>Developer</h5>
+    <hr>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+     cum fuga deleniti natus possimus.</p>
+    <div class="team-member-footer">
+     <a href="#"><i class="fa fa-facebook"></i></a>
+     <a href="#"><i class="fa fa-twitter"></i></a>
+     <a href="#"><i class="fa fa-linkedin"></i></a>
+     <a href="#"><i class="fa fa-google-plus"></i></a>
+    </div>
+   </article>
+   <article class="team-member">
+    <img src="images/team-4.jpg" alt="team-member">
+    <h2>Team-member Name</h2>
+    <h5>Developer</h5>
+    <hr>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+     cum fuga deleniti natus possimus.</p>
+    <div class="team-member-footer">
+     <a href="#"><i class="fa fa-facebook"></i></a>
+     <a href="#"><i class="fa fa-twitter"></i></a>
+     <a href="#"><i class="fa fa-linkedin"></i></a>
+     <a href="#"><i class="fa fa-google-plus"></i></a>
+    </div>
+   </article>
+  </div>
+ </section>
+ <!-- end of team section -->
 
 
 
@@ -215,14 +360,20 @@
  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
  <!-- isotope  -->
  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-
  <script src="iso.js">
  </script>
 
  <!-- jquery ui cdn -->
  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+ <!-- magnific -->
+ <script src="magnific/jquery.magnific-popup.min.js"></script>
  <!-- script js -->
  <script src="script.js"></script>
+ <!--  script magnific js -->
+ <script src="magnific/magnific.js"></script>
+ <!-- numscroller  -->
+ <script src="numscroller-1.0.js"></script>
 </body>
 
 </html>
