added pricing section with styles using grid.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <!-- title -->
   <div class="title">
    <div class="title-icon">
-    <i class="fa fa-image"></i>
+    <i class="fa fa-user"></i>
    </div>
    <div class="title-text">
     <h2 class="title-heading">Meet Our team</h2>
@@ -350,7 +350,134 @@
  <!-- end of team section -->
 
 
+ <!-- progress bars section -->
+ <section id="progress-bars">
+  <div class="progress-center">
+   <div class="progress-item">
+    <div class="progress-text">
+     <h2>Html</h2>
+     <h2>35%</h2>
+    </div>
+    <div id="p-bar-1"></div>
+   </div>
+   <div class="progress-item">
+    <div class="progress-text">
+     <h2>CSS3</h2>
+     <h2>70%</h2>
+    </div>
+    <div id="p-bar-2"></div>
+   </div>
+   <div class="progress-item">
+    <div class="progress-text">
+     <h2>javascript</h2>
+     <h2>60%</h2>
+    </div>
+    <div id="p-bar-3"></div>
+   </div>
+   <div class="progress-item">
+    <div class="progress-text">
+     <h2>java</h2>
+     <h2>80%</h2>
+    </div>
+    <div id="p-bar-4"></div>
+   </div>
+  </div>
+ </section>
+ <!-- end of progress bars section -->
 
+
+ <!-- pricing section -->
+ <section id="pricing">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-money"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">Our Amazing prices</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div class="pricing-center">
+   <!-- pricing card -->
+   <article class="pricing-card">
+    <h3>startup</h3>
+    <h1>$0</h1>
+    <ul>
+     <li class="price-list">
+      <i class="fa fa-check"></i>
+      <p>sharing tools</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-check"></i>
+      <p>design tools</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-times"></i>
+      <p>private messages</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-times"></i>
+      <p>personal brand</p>
+     </li>
+    </ul>
+    <a href="#">upgrade plan</a>
+   </article>
+   <!-- end of pricing card -->
+   <!-- pricing card -->
+   <article class="pricing-card custom">
+    <h3>Pro</h3>
+    <h1>$50</h1>
+    <ul>
+     <li class="price-list">
+      <i class="fa fa-check"></i>
+      <p>sharing tools</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-check"></i>
+      <p>design tools</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-times"></i>
+      <p>private messages</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-times"></i>
+      <p>personal brand</p>
+     </li>
+    </ul>
+    <a href="#">upgrade plan</a>
+   </article>
+   <!-- end of pricing card -->
+   <!-- pricing card -->
+   <article class="pricing-card">
+    <h3>commercial</h3>
+    <h1>$100</h1>
+    <ul>
+     <li class="price-list">
+      <i class="fa fa-check"></i>
+      <p>sharing tools</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-check"></i>
+      <p>design tools</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-times"></i>
+      <p>private messages</p>
+     </li>
+     <li class="price-list">
+      <i class="fa fa-times"></i>
+      <p>personal brand</p>
+     </li>
+    </ul>
+    <a href="#">upgrade plan</a>
+   </article>
+   <!-- end of pricing card -->
+  </div>
+ </section>
+ <!-- end of pricing section -->
 
 
  <!-- !!! important all the Jquery based tools must be placed after Jquery CDN !!! -->
