implementing owl css,bug fixing

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
  <!-- magnific pop up css -->
  <link rel="stylesheet" href="magnific/magnific-popup.css">
+ <!-- owl -->
+ <link rel="stylesheet" href="owl/owl.carousel.min.css">
+ <!-- owl theme -->
+ <link rel="stylesheet" href="owl/owl.theme.default.min.css">
 </head>
 
 <body>
@@ -479,6 +483,53 @@
  </section>
  <!-- end of pricing section -->
 
+ <!-- quotes -->
+ <section id="quotes">
+  <!-- title -->
+  <div class="title">
+   <div class="title-icon">
+    <i class="fa fa-comments"></i>
+   </div>
+   <div class="title-text">
+    <h2 class="title-heading">What customers say about us</h2>
+    <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+   </div>
+  </div>
+  <!-- end off title -->
+  <div class="quotes-center owl-carousel owl-theme">
+   <article class="quote">
+    <img src="images/team-4.jpg" alt="image">
+    <blockquote>
+     <p><i class="fa fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, est.</p>
+     <footer>-customer</footer>
+    </blockquote>
+   </article>
+   <article class="quote">
+    <img src="images/team-3.jpg" alt="image">
+    <blockquote>
+     <p><i class="fa fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, est.</p>
+     <footer>-customer</footer>
+    </blockquote>
+   </article>
+   <article class="quote">
+    <img src="images/team-1.jpg" alt="image">
+    <blockquote>
+     <p><i class="fa fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, est.</p>
+     <footer>-customer</footer>
+    </blockquote>
+   </article>
+  </div>
+
+
+
+ </section>
+ <!-- end of quotes -->
+
+
+
+
+
+
 
  <!-- !!! important all the Jquery based tools must be placed after Jquery CDN !!! -->
  <!-- Jquery cdn  -->
@@ -501,6 +552,8 @@
  <script src="magnific/magnific.js"></script>
  <!-- numscroller  -->
  <script src="numscroller-1.0.js"></script>
+ <!-- owl js  -->
+ <script src="owl/owl.carousel.min.js"></script>
 </body>
 
 </html>
