finished new project with html and css + some jQuery plugins, owl-carousel, isotop, magnific iamgezoomer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
  <link rel="stylesheet" href="owl/owl.carousel.min.css">
  <!-- owl theme -->
  <link rel="stylesheet" href="owl/owl.theme.default.min.css">
+ <link rel="stylesheet" href="script.js">
+
 </head>
 
 <body>
@@ -33,9 +35,9 @@
    <ul class="nav-links">
     <li><a href="#banner">Home</a></li>
     <li><a href="#skills">Services</a></li>
-    <li><a href="#Portfolio">Portfolio</a></li>
-    <li><a href="#About">About</a></li>
-    <li><a href="#Contacts">Contacts</a></li>
+    <li><a href="#work">Portfolio</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#footer">Contacts</a></li>
     <li class="nav-icons">
      <a href="#"><i class="fa fa-facebook"></i></a>
      <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -298,7 +300,8 @@
     <h2>Team-member Name</h2>
     <h5>Developer</h5>
     <hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto,
+     placeat
      cum fuga deleniti natus possimus.</p>
     <div class="team-member-footer">
      <a href="#"><i class="fa fa-facebook"></i></a>
@@ -312,7 +315,8 @@
     <h2>Team-member Name</h2>
     <h5>Developer</h5>
     <hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto,
+     placeat
      cum fuga deleniti natus possimus.</p>
     <div class="team-member-footer">
      <a href="#"><i class="fa fa-facebook"></i></a>
@@ -326,7 +330,8 @@
     <h2>Team-member Name</h2>
     <h5>Developer</h5>
     <hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto,
+     placeat
      cum fuga deleniti natus possimus.</p>
     <div class="team-member-footer">
      <a href="#"><i class="fa fa-facebook"></i></a>
@@ -340,7 +345,8 @@
     <h2>Team-member Name</h2>
     <h5>Developer</h5>
     <hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto, placeat
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fugit numquam minima adipisci architecto,
+     placeat
      cum fuga deleniti natus possimus.</p>
     <div class="team-member-footer">
      <a href="#"><i class="fa fa-facebook"></i></a>
@@ -443,7 +449,7 @@
       <p>design tools</p>
      </li>
      <li class="price-list">
-      <i class="fa fa-times"></i>
+      <i class="fa fa-check"></i>
       <p>private messages</p>
      </li>
      <li class="price-list">
@@ -468,11 +474,11 @@
       <p>design tools</p>
      </li>
      <li class="price-list">
-      <i class="fa fa-times"></i>
+      <i class="fa fa-check"></i>
       <p>private messages</p>
      </li>
      <li class="price-list">
-      <i class="fa fa-times"></i>
+      <i class="fa fa-check"></i>
       <p>personal brand</p>
      </li>
     </ul>
@@ -524,11 +530,36 @@
 
  </section>
  <!-- end of quotes -->
-
-
-
-
-
+ <!-- footer -->
+ <footer id="footer">
+  <section id="footer-info">
+   <div class="info-center">
+    <div class="info-item">
+     <i class="fa fa-check"></i>
+     <p>Phone: 777 777 333</p>
+    </div>
+    <div class="info-item">
+     <i class="fa fa-check"></i>
+     <p>Adress: prague city, district 9, freyova</p>
+    </div>
+    <div class="info-item">
+     <i class="fa fa-check"></i>
+     <p>Email: dummymail@mail.something</p>
+    </div>
+    <div class="info-item">
+     <i class="fa fa-check"></i>
+     <p>Hope to hear from you soon!</p>
+    </div>
+   </div>
+  </section>
+  <section id="footer-map">
+   <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d163931.25642584637!2d14.32554279715245!3d50.05958536156047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b939c0970798b%3A0x400af0f66164090!2z0J_RgNCw0LPQsA!5e0!3m2!1sru!2scz!4v1585596921684!5m2!1sru!2scz"
+    width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+    tabindex="0"></iframe>
+  </section>
+ </footer>
+ <!-- end of footer -->
 
 
  <!-- !!! important all the Jquery based tools must be placed after Jquery CDN !!! -->
@@ -538,12 +569,11 @@
  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
  <!-- isotope  -->
  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
- <script src="iso.js">
- </script>
-
  <!-- jquery ui cdn -->
  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
+ <!-- iso js -->
+ <script src="iso.js">
+ </script>
  <!-- magnific -->
  <script src="magnific/jquery.magnific-popup.min.js"></script>
  <!-- script js -->
@@ -554,6 +584,8 @@
  <script src="numscroller-1.0.js"></script>
  <!-- owl js  -->
  <script src="owl/owl.carousel.min.js"></script>
+
+
 </body>
 
 </html>
